--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ic_background4"
-    tools:context="com.zelix.biznesplanuzb.MainActivity4">
+    tools:context="com.zelix.biznesplanuzb.activities.MainActivity4">
 
     <TextView
         android:id="@+id/tv"
