--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ic_background3"
-    tools:context="com.zelix.biznesplanuzb.MainActivity3">
+    tools:context="com.zelix.biznesplanuzb.activities.MainActivity3">
 
 
     <TextView
