--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ic_splash_back"
-    tools:context=".SplashActivity">
+    tools:context=".activities.SplashActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
